--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,9 +30,17 @@
     <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
     <string name="enter_student_name">Enter Student Name</string>
     <string name="enter_student_phone_number">Enter Student Phone Number</string>
-    <string name="nama_barang">Nama Barang</string>
-    <string name="jenis_barang">Jenis Barang</string>
-    <string name="umur_barang">Umur Barang</string>
-    <string name="harga_barang">Harga Barang</string>
+    <string name="jenis_barang">Masukkan Jenis Barang</string>
+    <string name="harga_barang">Masukkan Harga Barang</string>
     <string name="jumlah_kilo">Jumlah/Kilo</string>
+    <string name="logout">Logout</string>
+    <string name="nama_barang">Masukkan Nama Barang</string>
+    <string name="umur_barang">Masukkan Umur Barang</string>
+    <string name="insert_data_into_firebase_database">Insert Data Into Firebase Database</string>
+    <string name="masukkan_jumlah_barang">Masukkan Jumlah Barang</string>
+    <string name="masukkan_harga_barang">Masukkan Harga Barang</string>
+    <string name="text_nama_barang">Nama Barang</string>
+    <string name="text_jenis_barang">Jenis Barang</string>
+    <string name="text_umur_barang">Umur Barang</string>
+    <string name="text_harga_barang">Harga Barang</string>
 </resources>
